--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -6,49 +6,37 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <picture>
-            <source
-              media="(min-width:1280px)"
-              srcset="
+            <source media="(min-width:1280px)" srcset="
                 ./images/blog/dt/blog3-dt-1x.webp 1x,
                 ./images/blog/dt/blog3-dt-2x.webp 2x
               "
               type="image/webp"
             />
-            <source
-              media="(min-width:1280px)"
-              srcset="
+            <source media="(min-width:1280px)" srcset="
                 ./images/blog/dt/blog3-dt@1x.jpg 1x,
                 ./images/blog/dt/blog3-dt@2x.jpg 2x
               "
               type="image/jpeg"
             />
-            <source
-              media="(min-width:768px)"
-              srcset="
+            <source media="(min-width:768px)" srcset="
                 ./images/blog/tb/blog3-tb-1x.webp 1x,
                 ./images/blog/tb/blog3-tb-2x.webp 2x
               "
               type="image/webp"
             />
-            <source
-              media="(min-width:768px)"
-              srcset="
+            <source media="(min-width:768px)" srcset="
                 ./images/blog/tb/blog3-tb@1x.jpg 1x,
                 ./images/blog/tb/blog3-tb@2x.jpg 2x
               "
               type="image/jpeg"
             />
-            <source
-              media="(max-width:767px)"
-              srcset="
+            <source media="(max-width:767px)" srcset="
                 ./images/blog/mb/blog3-mb-1x.webp 1x,
                 ./images/blog/mb/blog3-mb-2x.webp 2x
               "
               type="image/webp"
             />
-            <source
-              media="(max-width:767px)"
-              srcset="
+            <source media="(max-width:767px)" srcset="
                 ./images/blog/mb/blog3-mb@1x.jpg 1x,
                 ./images/blog/mb/blog3-mb@2x.jpg 2x
               "
@@ -67,49 +55,37 @@
 
         <div class="swiper-slide">
           <picture class="swiper-slide">
-            <source
-              media="(min-width:1280px)"
-              srcset="
+            <source media="(min-width:1280px)" srcset="
                 ./images/blog/dt/blog2-dt-1x.webp 1x,
                 ./images/blog/dt/blog2-dt-2x.webp 2x
               "
               type="image/webp"
             />
-            <source
-              media="(min-width:1280px)"
-              srcset="
+            <source media="(min-width:1280px)" srcset="
                 ./images/blog/dt/blog2-dt@1x.jpg 1x,
                 ./images/blog/dt/blog2-dt@2x.jpg 2x
               "
               type="image/jpeg"
             />
-            <source
-              media="(min-width:768px)"
-              srcset="
+            <source media="(min-width:768px)" srcset="
                 ./images/blog/tb/blog2-tb-1x.webp 1x,
                 ./images/blog/tb/blog2-tb-2x.webp 2x
               "
               type="image/webp"
             />
-            <source
-              media="(min-width:768px)"
-              srcset="
+            <source media="(min-width:768px)" srcset="
                 ./images/blog/tb/blog2-tb@1x.jpg 1x,
                 ./images/blog/tb/blog2-tb@2x.jpg 2x
               "
               type="image/jpeg"
             />
-            <source
-              media="(max-width:767px)"
-              srcset="
+            <source media="(max-width:767px)" srcset="
                 ./images/blog/mb/blog2-mb-1x.webp 1x,
                 ./images/blog/mb/blog2-mb-2x.webp 2x
               "
               type="image/webp"
             />
-            <source
-              media="(max-width:767px)"
-              srcset="
+            <source media="(max-width:767px)" srcset="
                 ./images/blog/mb/blog2-mb@1x.jpg 1x,
                 ./images/blog/mb/blog2-mb@2x.jpg 2x
               "
@@ -140,7 +116,6 @@
               "
               type="image/jpeg"
             />
-
             <source media="(min-width:768px)" srcset="
                 ./images/blog/tb/blog1-tb-1x.webp 1x,
                 ./images/blog/tb/blog1-tb-2x.webp 2x
@@ -153,13 +128,13 @@
               "
               type="image/jpeg"
             />
-            <source media="(max-width:768px)" srcset="
+            <source media="(max-width:767px)" srcset="
             ./images/blog/mb/blog1-mb-1x.webp 1x,
             ./images/blog/mb/blog1-mb-2x.webp 2x
           "
           type="image/webp"
             />
-            <source media="(max-width:768px)" srcset="
+            <source media="(max-width:767px)" srcset="
             ./images/blog/mb/blog1-mb@1x.jpg 1x,
             ./images/blog/mb/blog1-mb@2x.jpg 2x
           "
@@ -190,26 +165,26 @@
           "
           type="image/jpeg"
             />
-            <source media="(max-width:768px)" srcset="
+            <source media="(min-width:768px)" srcset="
                 ./images/blog/tb/flowers1-tb-1x.webp 1x,
                 ./images/blog/tb/flowers1-tb-2x.webp 2x
               "
               type="image/webp"
             />
-            <source media="(max-width:768px)" srcset="
+            <source media="(min-width:768px)" srcset="
               ./images/blog/tb/flowers1-tb@1x.jpg  1x,
               ./images/blog/tb/flowers1-tb@2x.jpg  2x
             "
             type="image/jpeg"
 
             />
-            <source media="(max-width:768px)" srcset="
+            <source media="(max-width:767px)" srcset="
                 ./images/blog/mb/flowers1-mb-1x.webp 1x,
                 ./images/blog/mb/flowers1-mb-2x.webp 2x
               "
               type="image/webp"
             />
-            <source media="(max-width:768px)" srcset="
+            <source media="(max-width:767px)" srcset="
             ./images/blog/mb/flowers1-mb@1x.jpg  1x,
             ./images/blog/mb/flowers1-mb@2x.jpg  2x
           "
@@ -241,28 +216,28 @@
               type="image/jpeg"
 
             />
-            <source media="(max-width:768px)" srcset="
+            <source media="(min-width:768px)" srcset="
                 ./images/blog/tb/flowers2-tb-1x.webp 1x,
                 ./images/blog/tb/flowers2-tb-2x.webp 2x
               "
               type="image/webp"
             />
-            <source media="(max-width:768px)" srcset="
-            ./images/blog/mb/flowers2-mb@1x.jpg  1x,
-            ./images/blog/mb/flowers2-mb@2x.jpg  2x
+            <source media="(min-width:768px)" srcset="
+            ./images/blog/tb/flowers2-tb@1x.jpg  1x,
+            ./images/blog/tb/flowers2-tb@2x.jpg  2x
             "
               type="image/jpeg"
             />
-            <source media="(max-width:768px)" srcset="
+            <source media="(max-width:767px)" srcset="
                 ./images/blog/mb/flowers2-mb-1x.webp 1x,
                 ./images/blog/mb/flowers2-mb-2x.webp 2x
               "
               type="image/webp"
 
             />
-            <source media="(max-width:768px)" srcset="
-                ./images/blog/tb/flowers2-tb@1x.jpg  1x,
-                ./images/blog/tb/flowers2-tb@2x.jpg  2x
+            <source media="(max-width:767px)" srcset="
+                ./images/blog/mb/flowers2-mb@1x.jpg  1x,
+                ./images/blog/mb/flowers2-mb@2x.jpg  2x
               "
               type="image/jpeg"
 
@@ -308,7 +283,7 @@
             type="image/jpeg"
 
           />
-            <source media="(max-width:768px)"
+            <source media="(max-width:767px)"
               srcset="
                 ./images/blog/mb/flowers3-mb-1x.webp 1x,
                 ./images/blog/mb/flowers3-mb-2x.webp 2x
@@ -316,7 +291,7 @@
               type="image/webp"
 
             />
-            <source media="(max-width:768px)"
+            <source media="(max-width:767px)"
             srcset="
               ./images/blog/mb/flowers3-mb@1x.jpg  1x,
               ./images/blog/mb/flowers3-mb@2x.jpg  2x
