--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -45,7 +45,7 @@
             <img
               src="./images/blog/dt/blog3-dt@1x.jpg"
               alt="blue iris flowers"
-              class="blog-foto"
+              class="blog__foto"
               loading="lazy"
               width="315"
               height="369"
@@ -94,7 +94,7 @@
             <img
               src="./images/blog/dt/blog2-dt@1x.jpg"
               alt="leaves for a bouquet"
-              class="blog-foto"
+              class="blog__foto"
               loading="lazy"
               width="315"
               height="369"
@@ -143,7 +143,7 @@
             <img
               src="./images/blog/dt/blog1-dt@1x.jpg"
               alt="orange calla flower"
-              class="blog-foto"
+              class="blog__foto"
               loading="lazy"
               width="315"
               height="369"
@@ -193,7 +193,7 @@
             <img
               src="./images/blog/dt/flowers1-dt@1x.jpg"
               alt="delicate white anemones"
-              class="blog-foto"
+              class="blog__foto"
               loading="lazy"
               width="315"
               height="369"
@@ -244,7 +244,7 @@
             <img
               src="./images/blog/dt/flowers2-dt@1x.jpg"
               alt="delicate bouquet of flowers"
-              class="blog-foto"
+              class="blog__foto"
               loading="lazy"
               width="315"
               height="369"
@@ -301,7 +301,7 @@
             <img
               src="./images/blog/dt/flowers3-dt@1x.jpg"
               alt="orange roses"
-              class="blog-foto"
+              class="blog__foto"
               loading="lazy"
               width="315"
               height="369"
@@ -322,7 +322,7 @@
       </div>
     </div>
 
-    <p class="blog-text-follow">Follow to our newsletter</p>
+    <p class="blog__text-follow">Follow to our newsletter</p>
     <button data-modal-open1 class="btn blog-btn">Subscribe</button>
   </div>
 </section>
