--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,13 +5,14 @@
       type="button"
       aria-expanded="false"
       aria-controls="mobile-menu"
+      aria-label="modal window toggle"
     >
       <span class="hamburger-box">
         <span class="hamburger-inner"></span>
       </span>
     </button>
 
-    <a href="./index.html" class="logo" id="up-logo">
+    <a href="./index.html" class="logo" id="up-logo" aria-label="logo Anemone">
       <svg class="logo__icon">
         <use href="./images/symbol-defs.svg#icon-Logo"></use>
       </svg>
@@ -35,7 +36,7 @@
         </li>
       </ul>
     </nav>
-    <button data-modal-open type="button" class="header__tel-btn">
+    <button data-modal-open type="button" class="header__tel-btn" aria-label="button calls a modal window Contact us">
       <svg class="header__icon">
         <use href="./images/symbol-defs.svg#icon-tel"></use>
       </svg>
