--- a/src/partials/up-button.html
+++ b/src/partials/up-button.html
@@ -1,4 +1,4 @@
-<a href="#up" class="page-up">
+<a href="#up" class="page-up" aria-label="button to turn up">
     <svg class="page-up__icon">
         <use href="./images/symbol-defs.svg#chevron-up"></use>
       </svg>
