--- a/src/partials/modal-contact-us.html
+++ b/src/partials/modal-contact-us.html
@@ -1,6 +1,6 @@
 <div data-modal class="backdrop is-hidden">
   <div class="modal">
-    <button data-modal-close class="modal__exit">
+    <button class="modal__exit" aria-label="close contact us" data-modal-close>
       <svg class="modal__exit-svg" width="18" height="18">
         <use href="./images/symbol-defs.svg#icon-close"></use>
       </svg>
