--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="about__title subtitle">about</h2>
     <div class="about__wrapper">
-      <p class="about__text" data-aos="zoom-out" data-aos-duration="1000">
+      <p class="about__text" data-aos="zoom-in-down" data-aos-duration="700">
         We are a minimalistic flower studio. We love people and flowers.
         Therefore, every day we give people the beauty and joy creating stylish
         and modern masterpieces. Every bouquet we create is unique as you are.
