--- a/src/partials/delivery.html
+++ b/src/partials/delivery.html
@@ -1,29 +1,29 @@
 <section class="section delivery" id="delivery">
   <div class="container">
     <h2 class="subtitle">DELIVERY</h2>
-    <ul class="delivery__list list">
-      <li class="delivery__item">
+    <ul class="delivery__list list" >
+      <li class="delivery__item" data-aos="zoom-in-left" data-aos-duration="300">
         <div class="delivery__number">1</div>
-        <p class="delivery__txt">
+        <p class="delivery__txt" >
           Choose your bouquet and make an order on website
         </p>
       </li>
-      <li class="delivery__item">
-        <div class="delivery__number">2</div>
-        <p class="delivery__txt">
+      <li class="delivery__item" data-aos="zoom-in-left" data-aos-duration="600" >
+        <div class="delivery__number" >2</div>
+        <p class="delivery__txt" >
           Wait for the call to clarify the details of the order. You can pay
           online or to the courier
         </p>
       </li>
-      <li class="delivery__item">
-        <div class="delivery__number">3</div>
-        <p class="delivery__txt">
+      <li class="delivery__item" data-aos="zoom-in-left" data-aos-duration="900">
+        <div class="delivery__number" >3</div>
+        <p class="delivery__txt" >
           Wait for the delivery at the selected time or pick up the order from
           the store
         </p>
       </li>
-      <li class="delivery__item">
-        <div class="delivery__number">4</div>
+      <li class="delivery__item" data-aos="zoom-in-left" data-aos-duration="1200">
+        <div class="delivery__number" >4</div>
         <p class="delivery__txt">Make someone happy or enjoy yourself</p>
       </li>
     </ul>
