--- a/src/partials/store.html
+++ b/src/partials/store.html
@@ -3,7 +3,7 @@
     <h2 class="subtitle store__title">STORE</h2>
     <ul class="store__list list">
       <li class="store__item">
-        <div class="store__card">
+        <div class="store__card" data-aos="zoom-in-right" data-aos-duration="800">
           <picture>
             <source
               srcset="
@@ -63,7 +63,7 @@
         </div>
       </li>
       <li class="store__item">
-        <div class="store__card">
+        <div class="store__card" data-aos="zoom-in-left" data-aos-duration="800">
           <picture>
             <source
               srcset="
@@ -122,7 +122,7 @@
         </div>
       </li>
       <li class="store__item">
-        <div class="store__card">
+        <div class="store__card" data-aos="zoom-in-right" data-aos-duration="800">
           <picture>
             <source
               srcset="
@@ -182,7 +182,7 @@
         </div>
       </li>
       <li class="store__item">
-        <div class="store__card">
+        <div class="store__card" data-aos="zoom-in-left" data-aos-duration="800">
           <picture>
             <source
               srcset="
