corrections aria-label

--- a/src/partials/delivery.html
+++ b/src/partials/delivery.html
@@ -29,34 +29,50 @@
     </ul>
   </div>
   <picture>
-    <source
-      srcset="
-        ./images/delivery/del-tb@1x.jpg  1x,
-        ./images/delivery/del-tb@2x.jpg  2x,
-        ./images/delivery/del-tb-1x.webp 1x,
-        ./images/delivery/del-tb-2x.webp 2x
-      "
-      media="(max-width:1279.98px)"
-    />
-    <source
-      srcset="
-        ./images/delivery/del-mb@1x.jpg  1x,
-        ./images/delivery/del-mb@2x.jpg  2x,
-        ./images/delivery/del-mb-1x.webp 1x,
-        ./images/delivery/del-mb-2x.webp 2x
-      "
-      media="(max-width: 767.98px)"
-    />
-    <source
-      srcset="
-        ./images/delivery/del-dt@1x.jpg  1x,
-        ./images/delivery/del-dt@2x.jpg  2x,
+    <source media="(min-width:1280px)" srcset="
         ./images/delivery/del-dt-1x.webp 1x,
         ./images/delivery/del-dt-2x.webp 2x
       "
-      media="(min-width:1280px)"
+      type="image/webp"
     />
-    <img src="./images/delivery/del-dt@1x.jpg" class="delivery-foto" alt="" />
+    <source media="(min-width:1280px)" srcset="
+      ./images/delivery/del-dt@1x.jpg  1x,
+      ./images/delivery/del-dt@2x.jpg  2x
+    "
+    type="image/jpeg"
+  />
+    <source media="(min-width:768px)"
+      srcset="
+        ./images/delivery/del-tb-1x.webp 1x,
+        ./images/delivery/del-tb-2x.webp 2x
+      "
+      type="image/webp"
+    />
+    <source media="(min-width:768px)"
+    srcset="
+      ./images/delivery/del-tb@1x.jpg  1x,
+      ./images/delivery/del-tb@2x.jpg  2x
+    "
+    type="image/jpeg"
+  />
+    <source media="(max-width:767px)" srcset="
+        ./images/delivery/del-mb-1x.webp 1x,
+        ./images/delivery/del-mb-2x.webp 2x
+      "
+      type="image/webp"
+    />
+    <source media="(max-width:767px)" srcset="
+    ./images/delivery/del-mb@1x.jpg  1x,
+    ./images/delivery/del-mb@2x.jpg  2x
+  "
+  type="image/jpeg"
+/>
+    <img src="./images/delivery/del-dt@1x.jpg" 
+    class="delivery-foto" 
+    alt="delicate anemone flowers"
+    loading="lazy"
+    width="1280"
+    height="391" />
   </picture>
 </section>
 
