--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -65,6 +65,8 @@
       data-modal-open
       class="hero__btn hero__btn-anim rotate-90-cw"
       type="button"
+      aria-label="open contact as window"
+
     >
       <svg class="hero__btn-svg" width="64" height="76">
         <use
