--- a/src/partials/modal-contact-us.html
+++ b/src/partials/modal-contact-us.html
@@ -7,7 +7,8 @@
     </button>
 
     <div class="modal-wrapper">
-      <button data-modal-close class="modal__exit">
+      <button data-modal-close class="modal__exit" aria-label="close modal window"
+      >
         <svg class="modal__exit-svg" width="18" height="18">
           <use href="./images/symbol-defs.svg#icon-close"></use>
         </svg>
