--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,7 +36,7 @@
         </li>
       </ul>
     </nav>
-    <button data-modal-open type="button" class="header__tel-btn" aria-label="button calls a modal window Contact us">
+    <button data-modal-open type="button" class="header__tel-btn" aria-label="calls window Contact us">
       <svg class="header__icon">
         <use href="./images/symbol-defs.svg#icon-tel"></use>
       </svg>
