update opoening time

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -30,7 +30,7 @@
       <p class="footer__title">Opening times</p>
       <p class="footer__worktime-item">
         Every day<br />
-        9:00 - 22:00
+        <time>9:00</time> - <time>22:00</time>
       </p>
     </div>
     <div class="footer__address wth">
