--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -321,12 +321,7 @@
         </svg>
       </div>
     </div>
-
-<<<<<<< Updated upstream
-    <p class="blog__text-follow">Follow to our newsletter</p>
-=======
-    <p class="blog-text-follow" data-aos="zoom-in" data-aos-duration="400">Follow to our newsletter</p>
->>>>>>> Stashed changes
+    <p class="blog__text-follow" data-aos="zoom-in" data-aos-duration="400">Follow to our newsletter</p>
     <button data-modal-open1 class="btn blog-btn">Subscribe</button>
   </div>
 </section>
