--- a/src/partials/modal-subscribe.html
+++ b/src/partials/modal-subscribe.html
@@ -1,37 +1,48 @@
 <div data-modal1 class="subscribe is-hidden">
   <div class="subscribe__wrapper">
     <picture>
-      <source
-        srcset="
-          ./images/modal(subscribe)/sub-mb@1x.jpg  1x,
-          ./images/modal(subscribe)/sub-mb@2x.jpg  2x,
-          ./images/modal(subscribe)/sub-mb@1x.webp 1x,
-          ./images/modal(subscribe)/sub-mb@2x.webp
-        "
-        media="(max-width:767.98px)"
-        type="image/webp"
-      />
-      <source
-        srcset="
-          ./images/modal(subscribe)/sub-tb@1x.jpg  1x,
-          ./images/modal(subscribe)/sub-tb@2x.jpg  2x,
-          ./images/modal(subscribe)/sub-tb@1x.webp 1x,
-          ./images/modal(subscribe)/sub-tb@2x.webp 2x
-        "
-        media="(max-width:1279.98px)"
-        type="image/webp"
-      />
-      <source
-        srcset="
-          ./images/modal(subscribe)/sub-dt@1x.jpg  1x,
-          ./images/modal(subscribe)/sub-dt@2x.jpg  2x,
+      <source media="(min-width:1280px)" srcset="
           ./images/modal(subscribe)/sub-dt@1x.webp 1x,
           ./images/modal(subscribe)/sub-dt@2x.webp 2x
         "
-        media="(min-width:1280px)"
         type="image/webp"
       />
-      <img src="./images/modal(subscribe)/sub-tb@1x.jpg" alt="" />
+      <source media="(min-width:1280px)" srcset="
+          ./images/modal(subscribe)/sub-dt@1x.jpg 1x,
+          ./images/modal(subscribe)/sub-dt@2x.jpg 2x
+        "
+        type="image/jpeg"
+      />
+      <source media="(min-width:768px)" srcset=" 
+          ./images/modal(subscribe)/sub-tb@1x.webp 1x,
+          ./images/modal(subscribe)/sub-tb@2x.webp 2x
+        "
+        type="image/webp"
+      />
+      <source media="(min-width:768px)" srcset="
+          ./images/modal(subscribe)/sub-tb@1x.jpg  1x,
+          ./images/modal(subscribe)/sub-tb@2x.jpg  2x
+        "
+        type="image/jpeg"
+      />
+      <source media="(max-width:767px)" srcset="
+          ./images/modal(subscribe)/sub-mb@1x.webp 1x,
+          ./images/modal(subscribe)/sub-mb@2x.webp 2x
+        "
+        type="image/webp"
+      />
+      <source media="(max-width:767px)" srcset="
+          ./images/modal(subscribe)/sub-mb@1x.jpg  1x,
+          ./images/modal(subscribe)/sub-mb@2x.jpg  2x
+        "
+        type="image/jpeg"
+      />
+      <img src="./images/modal(subscribe)/sub-tb@1x.jpg" 
+      alt="stylish bouquet of flowers"
+      loading="lazy"
+      width="588"
+      height="271"
+      />
     </picture>
 
     <div class="subscribe__information-wrapper">
@@ -48,6 +59,7 @@
       <form class="form-blog">
         <label for="email" class="form-blog-label">Email</label>
         <input
+          id="email"
           type="email"
           name="mail"
           placeholder="Your email"
