--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -56,8 +56,8 @@
           src="./images/hero/hero-mb@1x.png"
           alt="flower"
           loading="lazy"
-          width="390px"
-          height="693px"
+          width="390"
+          height="636"
         />
       </picture>
     </div>
