--- a/src/partials/modal-contact-us.html
+++ b/src/partials/modal-contact-us.html
@@ -1,4 +1,4 @@
-<div data-modal class="backdrop is-hidden">
+<div data-modal class="backdrop is-hidden hero__mintitle-anim">
   <div class="modal">
     <button class="modal__exit" aria-label="close contact us" data-modal-close>
       <svg class="modal__exit-svg" width="18" height="18">
