--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -61,8 +61,8 @@
           alt="flovers"
           class="about__img"
           loading="lazy"
-          width="632px"
-          height="344px"
+          width="632"
+          height="344"
         />
       </picture>
     </div>
