correction hamburger btn

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -52,10 +52,10 @@
 }
 
 .header__tel-btn {
-    position: absolute;
-    top: 4px;
-    right: 38px;
-    padding: 0;
+
+    margin-right: 14px;
+    margin-left: auto;
+    padding: 6px 0 0 ;
     border: none;
     background-color: transparent;
 
