--- a/src/sass/components/_hamburger.scss
+++ b/src/sass/components/_hamburger.scss
@@ -1,8 +1,8 @@
 @use "sass:math";
 // Settings
 // ==================================================
-$hamburger-padding-x           : 3px !default;
-$hamburger-padding-y           : 3px !default;
+$hamburger-padding-x           : 1px !default;
+$hamburger-padding-y           : 1px !default;
 $hamburger-layer-width         : 22px !default;
 $hamburger-layer-height        : 2px !default;
 $hamburger-layer-spacing       : 6px !default;
@@ -25,6 +25,7 @@ $hamburger-types: (collapse) !default;
 
 
     padding: $hamburger-padding-y $hamburger-padding-x;
+    padding-top: 7px;
     display: inline-block;
     cursor: pointer;
   
