--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -43,7 +43,7 @@
 
   @include mq(tablet) {
     align-items: center;
-    gap: 80px;
+    gap: 68px;
   }
   @include mq(desktop) {
     align-items: center;
@@ -61,6 +61,7 @@
 
 
   @include mq(tablet) {
+    margin-right: 0;
     margin-left: 0;
     top: 24px;
     right: 24px;
