--- a/src/partials/modal-subscribe.html
+++ b/src/partials/modal-subscribe.html
@@ -53,8 +53,8 @@
         src="./images/modal(subscribe)/sub-tb@1x.jpg"
         alt="stylish bouquet of flowers"
         loading="lazy"
-        width="588"
-        height="271"
+        max-width="428"
+        max-height="528"
       />
     </picture>
 
