--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,7 +20,7 @@
     <nav class="navigation">
       <ul class="nav__list list">
         <li class="nav__item">
-          <a href="#hero" class="nav__link">Anemone</a>
+          <a href="./index.html" class="nav__link">Anemone</a>
         </li>
         <li class="nav__item">
           <a href="#about-us" class="nav__link">About us</a>
