add animations and fix phone

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,10 +36,15 @@
         </li>
       </ul>
     </nav>
-    <button data-modal-open type="button" class="header__tel-btn" aria-label="calls window Contact us">
+    <a href="tel:+380631234567" class="header__tel-btn">
       <svg class="header__icon">
         <use href="./images/symbol-defs.svg#icon-tel"></use>
       </svg>
-    </button>
+    </a>
+    <!-- <button data-modal-open type="button" class="header__tel-btn" aria-label="calls window Contact us">
+      <svg class="header__icon">
+        <use href="./images/symbol-defs.svg#icon-tel"></use>
+      </svg>
+    </button> -->
   </div>
 </header>
