--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -3,12 +3,12 @@
   padding-bottom: 136px;
 
   @media screen and (min-width: 768px) {
-    padding-top: 119px;
+    padding-top: 100px;
     padding-bottom: 194px;
   }
 
   @media screen and (min-width: 1280px) {
-    padding-top: 149px;
+    padding-top: 105px;
     padding-bottom: 193px;
   }
 }
@@ -102,8 +102,8 @@
   object-position: center;
 
   @media screen and (min-width: 768px) {
-    width: 390px;
-    height: 636px;
+    width: 300px;
+    height: 490px;
   }
 }
 
@@ -140,6 +140,7 @@
 }
 
 .hero__btn-svg {
+  transition: transform 700ms ease-in-out;
   @media screen and (min-width: 768px) {
     width: 145px;
     height: 150px;
@@ -147,6 +148,11 @@
   @media screen and (min-width: 1280px) {
     width: 166px;
     height: 166px;
+  }
+  &:hover {
+    transform: rotateZ(360deg) scale(1.1);
+    transform-origin: center;
+    transition: transform 700ms ease-in-out;
   }
 }
 
